--- a/index.html
+++ b/index.html
@@ -723,7 +723,7 @@ nav {
     <div class="background-text"></div>
     <div class="background-text"></div>
     <div class="background-text"></div>
-    <img src="img/resim.jpeg" alt="Profil Fotoğrafı">
+    <img src="resim.jpeg" alt="Profil Fotoğrafı">
     <h1>Çağlar Kurkman</h1>
     <p>Yazılım dünyasına olan merakım ve çözüm odaklı yaklaşımım beni sürekli yeni teknolojiler keşfetmeye yöneltti. Full Stack Developer olma hedefiyle çıktığım bu yolda, hem ön yüzü (front-end) hem de arka yüzü (back-end) kapsayan projelerle kendimi geliştirdim.Node.js ve C# gibi güçlü dillerle web projeleri geliştirirken, Flutter ile mobil dünyaya adım attım. Aynı zamanda Unity ve Blender kullanarak hem oyun geliştirme hem de 3D tasarım alanlarında yaratıcılığımı besledim. Bu yolculukta edindiğim en önemli becerilerden biri de sadece kod yazmak değil, aynı zamanda farklı alanlar arasında köprü kurabilmek oldu.</p>
 </section>
@@ -1084,7 +1084,7 @@ document.addEventListener('DOMContentLoaded', () => {
        
         const loader = new GLTFLoader();
         loader.load(
-            './models/scene.gltf',
+            'scene.gltf',
             function (gltf) {
                 const model = gltf.scene;
                 scene.add(model);
@@ -1255,4 +1255,5 @@ contactForm.addEventListener('submit', async (e) => {
 
 </script>
 </body>
+
 </html>
